Too Long Todo Text Bug Solved

--- a/src/components/TodoItem/styles.css
+++ b/src/components/TodoItem/styles.css
@@ -6,6 +6,7 @@
     justify-content: space-between;
 
     cursor: pointer;
+    /* overflow: scroll; */
 }
 
 .todo-app--todo-item__div > p {
@@ -13,7 +14,9 @@
 	margin-left: 1em;
 	flex: 1;
 
-	transition: .3s;
+    transition: .3s;
+    width: 50%;
+    word-wrap: break-word;
 }
 
 .todo-app--text__p {
